<resources>
    <string name="app_name">AA账本</string>
    <string name="slogan">记录小团队的美好生活</string>
    <string name="tab_add_bill">记账</string>
    <string name="tab_statistic">统计</string>
    <string name="tab_user_center">我的</string>

    <string name="title_add_bill">@string/tab_add_bill</string>
    <string name="add_bill_sel_type">选择本次消费物品</string>
    <string-array name="bill_types">
        <item>果蔬</item>
        <item>蛋肉</item>
        <item>粮油</item>
        <item>零食</item>
        <item>水费</item>
        <item>电费</item>
        <item>气费</item>
        <item>网费</item>
        <item>物业费</item>
        <item>调味品</item>
        <item>日用品</item>
    </string-array>
    <string name="add_bill_total_amount">总消费金额</string>
    <string name="add_bill_date">消费日期</string>
    <string name="add_a_bill">记一笔</string>

    <string name="no_record">还没有记录，快去记一笔吧</string>
    <string name="statistic_month">月账单</string>
    <string name="statistic_year">年账单</string>
    <string name="statistic_custom">自定义</string>
    <string name="statistic_dedtail">明细</string>
    <string name="statistic_month_avg">月人均消费%1$.1f元</string>
    <string name="statistic_year_avg">年人均消费%1$.1f元</string>
    <string name="statistic_user_cost">垫付了%1$.1f元</string>

    <string name="title_user_center">个人中心</string>
    <string name="user_center_head_color">头像颜色</string>
    <string name="user_center_set_nickname">设置昵称</string>
    <string name="set_nickname_title">编辑昵称</string>
    <string name="user_center_sign_out">退出登录</string>
    <string name="title_head_setting">设置头像</string>
    <string name="head_setting_sel_color">设置头像</string>
    <string name="head_setting_preview">设置头像</string>
    <string name="head_setting_save">确认修改</string>
</resources>
