<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.sddy.baseui.Presenter" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/tv_add_bill_sel_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/shape_dot"
            android:drawablePadding="@dimen/margin_big"
            android:text="@string/add_bill_sel_type"
            style="@style/TextDefBlack"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_big"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_add_bill_types"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/tv_add_bill_sel_type" />

        <View
            android:id="@+id/view_amount_date_bg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:background="@color/white"
            android:layout_margin="@dimen/margin_large"
            app:layout_constraintTop_toBottomOf="@id/rv_add_bill_types" />


        <View
            android:id="@+id/view_add_bill_amount_div"
            android:layout_width="0dp"
            android:layout_height="@dimen/line_width_half"
            android:background="@color/line_gray"
            app:layout_constraintBottom_toBottomOf="@id/view_amount_date_bg"
            app:layout_constraintEnd_toEndOf="@id/view_amount_date_bg"
            app:layout_constraintStart_toStartOf="@id/view_amount_date_bg"
            app:layout_constraintTop_toTopOf="@id/view_amount_date_bg" />

        <TextView
            android:id="@+id/tv_add_bill_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/add_bill_total_amount"
            app:layout_constraintStart_toStartOf="@+id/view_amount_date_bg"
            app:layout_constraintTop_toTopOf="@id/view_amount_date_bg"
            app:layout_constraintBottom_toTopOf="@id/view_add_bill_amount_div" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextDefBlack"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:gravity="end"
            android:hint="0.00元"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toTopOf="@id/view_amount_date_bg"
            app:layout_constraintBottom_toTopOf="@id/view_add_bill_amount_div"
            app:layout_constraintStart_toEndOf="@+id/tv_add_bill_amount"
            app:layout_constraintEnd_toEndOf="@+id/view_add_bill_amount_div" />

        <TextView
            android:id="@+id/tv_add_bill_date_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_bill_date"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="@id/view_amount_date_bg"
            app:layout_constraintTop_toBottomOf="@id/view_add_bill_amount_div"
            app:layout_constraintBottom_toBottomOf="@id/view_amount_date_bg" />

        <TextView
            android:id="@+id/tv_add_bill_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="8dp"
            tools:text="2018-09-15"
            style="@style/TextDefBlack"
            android:drawableRight="@drawable/icon_item_more"
            android:drawablePadding="@dimen/margin_big"
            android:onClick="@{(v)->presenter.onClick(v)}"
            app:layout_constraintEnd_toEndOf="@id/view_amount_date_bg"
            app:layout_constraintTop_toBottomOf="@id/view_add_bill_amount_div"
            app:layout_constraintBottom_toBottomOf="@id/view_amount_date_bg" />

        <Button
            android:id="@+id/btn_add_bill_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextBigWhite"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/add_a_bill"
            android:background="@drawable/selector_main_press_light_corner"
            android:onClick="@{(v)->presenter.onClick(v)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_amount_date_bg" />


    </android.support.constraint.ConstraintLayout>
</layout>