<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="presenter"
            type="com.sddy.baseui.Presenter" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".HeadSettingActivity">

        <View
            android:id="@+id/view_head_seeting_bg"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_margin="@dimen/margin_large"
            tools:background="@color/white"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head_setting_sel_color"
            style="@style/TextDefBlack"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintTop_toTopOf="@id/view_head_seeting_bg"
            app:layout_constraintBottom_toTopOf="@id/view_head_seeting_div"
            app:layout_constraintStart_toStartOf="@id/view_head_seeting_bg" />

        <View
            android:id="@+id/view_head_setting_cyan"
            android:layout_width="@dimen/head_color_panel"
            android:layout_height="@dimen/head_color_panel"
            android:background="@drawable/shape_dot"
            android:layout_marginEnd="@dimen/margin_20dp"
            android:onClick="@{(v)->presenter.onClick(v)}"
            app:layout_constraintTop_toTopOf="@id/view_head_seeting_bg"
            app:layout_constraintBottom_toTopOf="@id/view_head_seeting_div"
            app:layout_constraintEnd_toEndOf="@id/view_head_seeting_bg" />

        <View
            android:id="@+id/view_head_setting_red"
            android:layout_width="@dimen/head_color_panel"
            android:layout_height="@dimen/head_color_panel"
            android:background="@drawable/shape_dot"
            android:layout_marginEnd="@dimen/margin_large"
            android:onClick="@{(v)->presenter.onClick(v)}"
            app:layout_constraintTop_toTopOf="@id/view_head_seeting_bg"
            app:layout_constraintBottom_toTopOf="@id/view_head_seeting_div"
            app:layout_constraintEnd_toStartOf="@id/view_head_setting_cyan" />

        <View
            android:id="@+id/view_head_setting_yellow"
            android:layout_width="@dimen/head_color_panel"
            android:layout_height="@dimen/head_color_panel"
            android:background="@drawable/shape_dot"
            android:layout_marginEnd="@dimen/margin_large"
            android:onClick="@{(v)->presenter.onClick(v)}"
            app:layout_constraintTop_toTopOf="@id/view_head_seeting_bg"
            app:layout_constraintBottom_toTopOf="@id/view_head_seeting_div"
            app:layout_constraintEnd_toStartOf="@id/view_head_setting_red" />

        <View
            android:id="@+id/view_head_setting_blue"
            android:layout_width="@dimen/head_color_panel"
            android:layout_height="@dimen/head_color_panel"
            android:background="@drawable/shape_dot"
            android:layout_marginEnd="@dimen/margin_large"
            android:onClick="@{(v)->presenter.onClick(v)}"
            app:layout_constraintTop_toTopOf="@id/view_head_seeting_bg"
            app:layout_constraintBottom_toTopOf="@id/view_head_seeting_div"
            app:layout_constraintEnd_toStartOf="@id/view_head_setting_yellow" />

        <View
            android:id="@+id/view_head_seeting_div"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/line_gray"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toTopOf="@id/view_head_seeting_bg"
            app:layout_constraintStart_toStartOf="@id/view_head_seeting_bg"
            app:layout_constraintEnd_toEndOf="@id/view_head_seeting_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextDefBlack"
            android:text="@string/head_setting_preview"
            android:layout_marginStart="@dimen/margin_large"
            app:layout_constraintStart_toStartOf="@id/view_head_seeting_bg"
            app:layout_constraintTop_toBottomOf="@id/view_head_seeting_div"
            app:layout_constraintBottom_toBottomOf="@id/view_head_seeting_bg" />

        <TextView
            android:id="@+id/tv_head_setting_preview"
            android:layout_width="@dimen/circle_head_size"
            android:layout_height="@dimen/circle_head_size"
            tools:background="@drawable/shape_dot"
            style="@style/TextDefWhite"
            tools:text="申勇"
            android:gravity="center"
            android:layout_marginEnd="@dimen/margin_20dp"
            app:layout_constraintEnd_toEndOf="@id/view_head_seeting_bg"
            app:layout_constraintTop_toBottomOf="@id/view_head_seeting_div"
            app:layout_constraintBottom_toBottomOf="@id/view_head_seeting_bg" />

        <Button
            android:id="@+id/btn_head_seeting_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_common_h"
            android:text="@string/head_setting_save"
            style="@style/TextBigWhite"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:layout_marginTop="32dp"
            android:onClick="@{(v)->presenter.onClick(v)}"
            android:background="@drawable/selector_main_press_light_corner"
            app:layout_constraintTop_toBottomOf="@id/view_head_seeting_bg" />

    </android.support.constraint.ConstraintLayout>
</layout>